--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,54 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    background: cyan;
     text-align: center;
+    font-family: sans-serif;
+    font-size: 28px;
     margin: 20px;
-    background-color: cyan;
-    font-size: xx-large;
 }
 
-input{
-    font-size: xx-large;
+input {
+    font-size: 25px;
+    padding: 5px;
 }
 
-button{
-    font-size: xx-large;
-    background-color: green;
+button {
+    font-size: 25px;
+    background: green;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    cursor: pointer;
+}
+
+img {
+    width: 200px;
+    height: auto;
+    margin: 10px;
+}
+body {
+    background: cyan;
+    text-align: center;
+    font-family: sans-serif;
+    font-size: 28px;
+    margin: 20px;
+}
+
+input {
+    font-size: 25px;
+    padding: 5px;
+}
+
+button {
+    font-size: 25px;
+    background: green;
+    color: white;
+    padding: 6px 12px;
+    border: none;
+    cursor: pointer;
+}
+
+img {
+    width: 200px;
+    height: auto;
+    margin: 10px;
 }
